# graph_tools_for_agents

./: .gitignore  .ruff.toml  main.py  pyproject.toml  requirements.txt  tools.py  viktor.config.toml
app/: controller.py  tools.py
app/viktor_tools/: base.py  footing_capacity_tool.py  geometry_tool.py  plotting_tool.py  seismic_load_tool.py  sensitivity_analysis_tool.py  structural_analysis_tool.py  wind_loads_tool.py
app/workflow_graph/: models.py  styles.css  viewer.py  workflow.js
test/: agent_run.py  example_composed_workflow.py  viktor_tool_test.py
workflow_graph/: example_workflow.py  viewer.py  workflow.js  workflow.json
