[project]
name = "graph-tools-for-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.6.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "viktor>=14.26.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
